# seppi-project/server.js
@@ -539,6 +539,163 @@ app.post('/searchRecipe', async (req, res) => {
     });
 });
 
+app.post('/searchRecipeTop', async (req, res) => {
+    if (req.body.idToken == null)
+    {
+        return res.status(400).send(JSON.stringify({response : 'No user'}));
+    }
+    var decodedToken = await firebaseAdminSdk.auth().verifyIdToken(req.body.idToken);
+    if (decodedToken == null)
+    {
+        return res.status(400).send(JSON.stringify({response : 'No user'}));
+    }
+    const uid = decodedToken.uid;
+
+
+    let userRef = db.collection('users').doc(uid);
+    const favoritesRef = userRef.collection('BookmarkedRecipes');
+    const favoritesDocs = await favoritesRef.get();
+
+                let categoriesRef = userRef.collection('IngredientList');
+                let arr = [];
+                let json = {};
+
+                let categories = await categoriesRef.get();
+                let categoriesArr = [];
+
+                categories.forEach(category => {
+                  categoriesArr.push(category);
+                });
+
+                for (let i = 0; i < categoriesArr.length; ++i) {
+                  let ingredients = await categoriesRef.doc(categoriesArr[i].id).collection('Ingredients').get();
+                  // would check if expired here I guess. If wanted to add that
+                  ingredients.forEach(ingredient => {
+                      let data = ingredient.data();
+                      let expiration = new Date(data.expiration).getTime();
+                      let date = Date.now();
+                      let days = Math.floor((expiration - date) / (1000 * 3600 * 24)) + 1;
+                      if (days >= 0) {
+                        arr.push(ingredient.data().ingredient);
+                      }
+                  });
+
+                }
+    // Add the favorited URI's to a set.
+    let docSet = new Set();
+    favoritesDocs.forEach(doc => {
+      docSet.add(doc.data().recipe.shareAs);
+    });
+
+    var apikey = process.env.RECIPE_API_KEY
+    var app_id = process.env.RECIPE_APP_ID
+    var url = 'https://api.edamam.com/search?q=' + 'chicken';
+
+    if (req.body.filters !== undefined && req.body.filters !== null)
+      url += '&' + req.body.filters;
+    var from = 0;
+    var to = 10;
+    if (req.body.from != null)
+    {
+        from = req.body.from;
+    }
+    if (req.body.to != null)
+    {
+        to = req.body.to;
+    }
+    /* or if you want to send page and size of each page. where page 0 is starting.
+    page = req.body.page;
+    size = req.body.size;
+    and then you can do
+    url += '&from=' + page * size;
+    var next = page + 1;
+    url += '&to=' + next * size;
+    */
+    url += '&from=' + from;
+    url += '&to=' + to;
+    url += '&app_id='
+    url += app_id
+    url += "&app_key="
+    url += apikey
+    const https = require('https');
+    var x = "";
+    var recipe = {
+
+    }
+    recipe = https.get(url, (_res) => {
+      _res.on('data', (d) => {
+        x += d;
+      });
+      _res.on("end", function () {
+            // Process the search data and figure out which recipes are bookmarked by the user.
+            let data = JSON.parse(x);
+            var first = 0;
+            var index1 = 0;
+            var index2 = 1;
+            var second = 0;
+            // If data doesn't exist return.
+            if (data === undefined || data.hits === undefined) {
+              return res.status(400).send({response: 'No searches returned'});
+            }
+            array2 = []
+            for (let i = 0; i < data.hits.length; ++i) {
+                array1 = []
+                match = []
+                not = []
+                var ratio = 0;
+                var total = 0;
+                for (let j = 0; j < data.hits[i].recipe.ingredients.length; j++)
+                {
+                    var y = 0;
+                    for (let k = 0; k < arr.length; k++)
+                    {
+                        if (arr[k].toLowerCase().replace(/[.,\/#!$%\^&\*;:{}=\-_`~()]/g,"") == data.hits[i].recipe.ingredients[j].food.toLowerCase().replace(/[.,\/#!$%\^&\*;:{}=\-_`~()]/g,"") || arr[k].toLowerCase().replace(/[.,\/#!$%\^&\*;:{}=\-_`~()]/g,"").concat("s") == data.hits[i].recipe.ingredients[j].food.toLowerCase().replace(/[.,\/#!$%\^&\*;:{}=\-_`~()]/g,""))
+                        {
+                            y = 1;
+                            ratio++;
+                            match.push(data.hits[i].recipe.ingredients[j].food)
+                        }
+                    }
+                    total++;
+                    if (y == 0)
+                    {
+                        not.push(data.hits[i].recipe.ingredients[j].food)
+                    }
+                    //array1.push(data.hits[i].recipe.ingredients[j].food)
+                }
+                var z = ratio / total;
+                if (z > first)
+                {
+                    first = z;
+                    index1 = i
+                }
+                if (z > second && index1 != i)
+                {
+                    second = z;
+                    index2 = i;
+                }
+                data.hits[i].recipe.match = match
+                data.hits[i].recipe.not = not
+                data.hits[i].recipe.ratio = ratio / total
+                array2.push(array1)
+              if (docSet.has(data.hits[i].recipe.shareAs)) {
+                data.hits[i].bookmarked = true;
+              }
+            }
+            recipe = {
+                top: data.hits[index1],
+                second: data.hits[index2]
+            }
+            return res.status(200).send({hits: recipe});
+
+        });
+
+    }).on('error', (e) => {
+      console.error(e);
+    });
+    return;
+});
+
 app.post('/userInfo', (req, res) => {
       firebase.auth().onAuthStateChanged(function(user) {
       if (user) {
